--- a/Notebooks/Exploratory_analysis.ipynb
+++ b/Notebooks/Exploratory_analysis.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "# Input is the BRMS model input csv file name\n",
-    "file_name = \"silo_vpd_pcs_max_temp.csv\""
+    "file_name = \"eratos_vpd_fc.csv\""
    ]
   },
   {
@@ -106,6 +106,9 @@
     "\n",
     "# Read the csv into df\n",
     "df = pd.read_csv(os.path.join('..', 'output', 'csv', file_name))\n",
+    "import numpy as np\n",
+    "\n",
+    "df.insert(1, 'VPD', np.NaN)\n",
     "\n",
     "# Find column names\n",
     "regex = re.compile(investigated_variable, re.IGNORECASE)\n",
@@ -132,9 +135,16 @@
     "    'aspect',\n",
     "    'relief',\n",
     "    'veg_cover',\n",
-    "]  # , 'veg_cover']\n",
+    "]\n",
     "\n",
     "for ax, col in zip(axes, plot_order):\n",
+    "    print(f'col: {col}')\n",
+    "    df[col] = pd.to_numeric(df[col], errors='coerce')\n",
+    "    if df[col].isna().all():\n",
+    "        print(f\"Skipping {col} (all NaN)\")\n",
+    "        ax.set_xlabel(col)\n",
+    "        continue\n",
+    "\n",
     "    ax.hist(df[col], bins=30, color='skyblue', edgecolor='black')\n",
     "    ax.set_xlabel(col)\n",
     "    ax.set_ylabel(\"Frequency\")\n",
@@ -153,9 +163,16 @@
   {
    "cell_type": "code",
    "execution_count": null,
-   "metadata": {
-    "id": "MFn0k92C1aqz"
-   },
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "df"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
    "outputs": [],
    "source": []
   }
