--- a/Notebooks/remote_data_compilation/eratos_sdi.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_sdi.ipynb
@@ -20,8 +20,8 @@
    "outputs": [],
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
-    "input_file_name = 'in-situ_topography_pcs.csv'\n",
-    "output_file_name = 'eratos_sdi_pcs_min_soil_mois.csv'\n",
+    "input_file_name = 'in-situ_topography_fc.csv'\n",
+    "output_file_name = 'eratos_sdi_fc_9am.csv'\n",
     "\n",
     "eratos_sdi_path = 'Data/eratos/ANU_CombinedSites_SDI.csv'  # daily"
    ]
@@ -43,6 +43,7 @@
     "sys.path.append(working_dir)\n",
     "import os\n",
     "\n",
+    "import numpy as np\n",
     "from tqdm import tqdm\n",
     "\n",
     "tqdm.pandas()\n",
@@ -78,7 +79,7 @@
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
     "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
-    "df = df[~df['Soil_mois'].isna()]\n",
+    "# df = df[~df['Soil_mois'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "if 'UTC_Datetime' in df.columns:\n",
     "    df['UTC_Datetime'] = pd.to_datetime(df['UTC_Datetime'])\n",
@@ -129,27 +130,8 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "# Selecting only obs with has the daily min Soil_mois value\n",
-    "\n",
-    "variable = 'Soil_mois'\n",
-    "date_column_name = 'eratos_observation_date'\n",
-    "df[date_column_name] = df['UTC_Datetime'].dt.date\n",
-    "df_min_soil_mois = get_daily_extreme_observation(df, variable, date_column_name, option='min')\n",
-    "df_min_soil_mois.head()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "# Select the first observations if there are multiple ones that has daily minimum soil_mois\n",
-    "\n",
-    "df_min_soil_mois = df_min_soil_mois.loc[\n",
-    "    df_min_soil_mois.groupby(['SiteID', 'eratos_observation_date'])['UTC_Datetime'].idxmin()\n",
-    "]\n",
-    "df_min_soil_mois.head()"
+    "df_9am = df[(df['Datetime'].dt.hour == 9) & (df['Datetime'].dt.minute == 0)]\n",
+    "df_9am.head()"
    ]
   },
   {
@@ -165,7 +147,7 @@
    },
    "outputs": [],
    "source": [
-    "# Fill in df_min_soil_mois with eratos data\n",
+    "# Fill in df_9am with eratos data\n",
     "\n",
     "\n",
     "# For each row, open eratos data csv file one-by-one to get data\n",
@@ -174,15 +156,17 @@
     "    SiteID_str = ''.join(c for c in SiteID_str if c.isdigit())\n",
     "\n",
     "    target_time = row['UTC_Datetime'].round('1d').strftime('%Y-%m-%d')\n",
-    "    eratos_value = eratos_df.loc[eratos_df['Date'] == target_time, SiteID_str].values[0]\n",
+    "    try:\n",
+    "        eratos_value = eratos_df.loc[eratos_df['Date'] == target_time, SiteID_str].values[0]\n",
+    "        return eratos_value\n",
+    "    except (IndexError, KeyError):\n",
+    "        return np.nan\n",
     "\n",
-    "    return eratos_value\n",
     "\n",
-    "\n",
-    "df_min_soil_mois['eratos_SDI'] = df_min_soil_mois.progress_apply(\n",
+    "df_9am['eratos_SDI'] = df_9am.progress_apply(\n",
     "    lambda row: get_eratos_value(row, eratos_sdi_df), axis=1\n",
     ")\n",
-    "df_min_soil_mois.head()"
+    "df_9am.head()"
    ]
   },
   {
@@ -199,7 +183,7 @@
    "outputs": [],
    "source": [
     "# Investigate the result - There are only NaNs in veg_cover column\n",
-    "df_min_soil_mois[df_min_soil_mois['eratos_SDI'].isna()]"
+    "df_9am[df_9am['eratos_SDI'].isna()]"
    ]
   },
   {
@@ -219,7 +203,8 @@
    },
    "outputs": [],
    "source": [
-    "df_min_soil_mois.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
+    "df_9am = df_9am[~df_9am['eratos_SDI'].isna()]\n",
+    "df_9am.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
    ]
   },
   {
