--- a/Notebooks/remote_data_compilation/eratos_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/eratos_vpd.ipynb
@@ -21,8 +21,8 @@
    "outputs": [],
    "source": [
     "working_dir = '../..'  # This repository's root directory\n",
-    "input_file_name = 'in-situ_topography_pcs.csv'\n",
-    "output_file_name = 'eratos_vpd_pcs.csv'\n",
+    "input_file_name = 'in-situ_topography_fc.csv'\n",
+    "output_file_name = 'eratos_vpd_fc.csv'\n",
     "\n",
     "eratos_rh_path = 'Data/eratos/ANU_CombinedSites_RH.csv'\n",
     "eratos_temp_path = 'Data/eratos/ANU_CombinedSites_Temp.csv'\n",
@@ -49,6 +49,7 @@
     "from tqdm import tqdm\n",
     "\n",
     "tqdm.pandas()\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "from Utils.datetime import add_UTC_Datetime\n",
@@ -80,7 +81,7 @@
     "# Load in-situ_topography.csv as the main df\n",
     "\n",
     "df = pd.read_csv(os.path.join(working_dir, \"output\", \"csv\", input_file_name))\n",
-    "df = df[~df['VPD'].isna()]\n",
+    "# df = df[~df['VPD'].isna()]\n",
     "df['Datetime'] = pd.to_datetime(df['Datetime'])\n",
     "if 'UTC_Datetime' in df.columns:\n",
     "    df['UTC_Datetime'] = pd.to_datetime(df['UTC_Datetime'])\n",
@@ -158,9 +159,11 @@
     "    SiteID_str = ''.join(c for c in SiteID_str if c.isdigit())\n",
     "\n",
     "    target_time = row['UTC_Datetime'].round('1h').strftime('%Y-%m-%d %H:%M:%S')\n",
-    "    eratos_value = eratos_df.loc[eratos_df['Date_time'] == target_time, SiteID_str].values[0]\n",
-    "\n",
-    "    return eratos_value\n",
+    "    try:\n",
+    "        eratos_value = eratos_df.loc[eratos_df['Date_time'] == target_time, SiteID_str].values[0]\n",
+    "        return eratos_value\n",
+    "    except (IndexError, KeyError):\n",
+    "        return np.nan\n",
     "\n",
     "\n",
     "df['eratos_Temperature'] = df.progress_apply(\n",
@@ -232,6 +235,7 @@
    },
    "outputs": [],
    "source": [
+    "df = df[~df['eratos_VPD'].isna()]\n",
     "df.to_csv(os.path.join(working_dir, \"output\", \"csv\", output_file_name), index=False)"
    ]
   },
