Removed observations with NaN veg_cover and silo_VPD

--- a/Notebooks/Exploratory_analysis.ipynb
+++ b/Notebooks/Exploratory_analysis.ipynb
@@ -9,7 +9,7 @@
    "outputs": [],
    "source": [
     "# Input is the BRMS model input csv file name\n",
-    "file_name = \"eratos_vpd_fc.csv\""
+    "file_name = \"silo_vpd_phd_max_temp.csv\""
    ]
   },
   {
@@ -102,13 +102,12 @@
     "import os\n",
     "\n",
     "import matplotlib.pyplot as plt\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "\n",
     "# Read the csv into df\n",
     "df = pd.read_csv(os.path.join('..', 'output', 'csv', file_name))\n",
-    "import numpy as np\n",
-    "\n",
-    "df.insert(1, 'VPD', np.NaN)\n",
+    "# df.insert(1, 'VPD', np.NaN)\n",
     "\n",
     "# Find column names\n",
     "regex = re.compile(investigated_variable, re.IGNORECASE)\n",
@@ -158,15 +157,6 @@
     "plt.savefig(os.path.join(plot_dir, file_name.replace(\".csv\", \".png\")))\n",
     "\n",
     "plt.show()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "df"
    ]
   },
   {
