--- a/Notebooks/in-situ_data_preparation/phd.ipynb
+++ b/Notebooks/in-situ_data_preparation/phd.ipynb
@@ -684,6 +684,7 @@
    "source": [
     "# save df\n",
     "df = add_AEST_Datetime(df)\n",
+    "df = df[~df['veg_cover'].isna()]\n",
     "df.to_csv(os.path.join(output_dir, 'in-situ_topography_phd.csv'), index=False)\n",
     "df"
    ]
