--- a/Notebooks/remote_data_compilation/silo_vpd.ipynb
+++ b/Notebooks/remote_data_compilation/silo_vpd.ipynb
@@ -43,6 +43,7 @@
     "import os\n",
     "import sys\n",
     "\n",
+    "import numpy as np\n",
     "import pandas as pd\n",
     "from tqdm import tqdm\n",
     "\n",
@@ -212,7 +213,7 @@
     "    df_max_temp.groupby(['SiteID', 'silo_observation_date'])['RH'].idxmin()\n",
     "]\n",
     "df_min_temp = df_min_temp.loc[\n",
-    "    df_min_temp.groupby(['SiteID', 'silo_observation_date'])['RH'].idxmin()\n",
+    "    df_min_temp.groupby(['SiteID', 'silo_observation_date'])['RH'].idxmax()\n",
     "]\n",
     "df_max_temp.head()\n",
     "\n",
@@ -246,9 +247,15 @@
     "\n",
     "    df_silo['Datetime'] = pd.to_datetime(df_silo['YYYY-MM-DD'], format='%Y-%m-%d')\n",
     "    target_date = row['silo_observation_date']\n",
-    "    silo_value = df_silo.loc[df_silo['Datetime'].dt.date == target_date, column].values[0]\n",
+    "    matched = df_silo.loc[df_silo['Datetime'].dt.date == target_date, column]\n",
     "\n",
-    "    return silo_value\n",
+    "    if matched.empty:\n",
+    "        print(\n",
+    "            f'Cannot find matched SILO data for in-situ observation SiteID {row['SiteID']} at {target_date}'\n",
+    "        )\n",
+    "        return None\n",
+    "\n",
+    "    return matched.values[0]\n",
     "\n",
     "\n",
     "df_max_temp['silo_Temperature'] = df_max_temp.progress_apply(\n",
@@ -300,8 +307,8 @@
     "# Investigate null values. Site 251 is located in the ocean.\n",
     "print(\"df_max_temp length: \", len(df_max_temp))\n",
     "print(\"df_min_temp length: \", len(df_min_temp))\n",
-    "df_max_temp[(df_max_temp.isna().any(axis=1)) & (df_max_temp['SiteID'] != 251)]\n",
-    "df_min_temp[(df_min_temp.isna().any(axis=1)) & (df_min_temp['SiteID'] != 251)]"
+    "df_max_temp[df_max_temp.isna().any(axis=1)]\n",
+    "df_min_temp[df_min_temp.isna().any(axis=1)]"
    ]
   },
   {
@@ -356,7 +363,11 @@
    "source": [
     "# Drop helper columns\n",
     "df_max_temp.drop(columns=['Day_max_temp'], inplace=True)\n",
-    "df_min_temp.drop(columns=['Day_max_temp', 'Day_min_temp'], inplace=True)"
+    "df_min_temp.drop(columns=['Day_max_temp', 'Day_min_temp'], inplace=True)\n",
+    "\n",
+    "# Remove observations without SILO data\n",
+    "df_max_temp = df_max_temp[~df_max_temp['silo_VPD'].isna()]\n",
+    "df_min_temp = df_min_temp[~df_min_temp['silo_VPD'].isna()]"
    ]
   },
   {
