--- a/Notebooks/topography/topography_insertion.ipynb
+++ b/Notebooks/topography/topography_insertion.ipynb
@@ -315,6 +315,8 @@
    "source": [
     "# save df\n",
     "df.drop(columns=['dea_x', 'dea_y', 'veg_cover_point_series'], inplace=True)\n",
+    "df = df[~df['veg_cover'].isna()]\n",
+    "\n",
     "df.to_csv(os.path.join(working_dir, output_dir_path), index=False)\n",
     "df.head()"
    ]
